--- a/style.css
+++ b/style.css
@@ -22,10 +22,7 @@ body{
 .tournament-name{
     color: white;
     font-size: 44px;
-    /* margin: 210px 150px; */
-    /* width: 485px;
-    height: 230px;
-    padding: 20px 25px;*/
+
 }
 
 .tv-broadcast{
@@ -72,6 +69,34 @@ body{
     color: rgb(105, 101, 101);
     margin: 15px 15px;
 }
+/* optional item start */
+
+.center-position{
+    text-align: center;
+}
+.image-adjust img{
+    width: 75%;
+}
+.favourite-players{
+    display: flex;
+    /* grid-template-columns: repeat(3, 1fr); */
+    padding: 20px 20px;
+    margin-bottom: 50px;
+} 
+.favp-image img{
+    width: 65%;
+    box-shadow: 10px 10px 40px rgb(53, 50, 50);}
+
+.biography-button{
+        background-image: linear-gradient(tomato,Orange);
+        text-decoration: none;
+        font-size: 25px;
+        border-radius: 5%;
+        margin: 5px;
+        padding: 5px 5px;
+        color: indigo;
+    }
+
 /* footer */
 .logo{
     text-align: center;
